--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "bithound": "1.7.0",
+    "codecov": "^2.1.0",
     "coveralls": "^2.12.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "codecov": "^2.1.0"
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "test": "test",
