--- a/.bithoundrc
+++ b/.bithoundrc
@@ -41,7 +41,9 @@
     "**/extjs/resources/**",
     "**/extjs/src/**",
     "**/extjs/welcome/**",
-    "bower_components/**"
+    "bower_components/**",
+    "examples/**/**",
+    "test/**",
   ],
   "test": [
     "**/test/**",
